fixed overflow bug with questions

--- a/src/components/css/Grid-style.css
+++ b/src/components/css/Grid-style.css
@@ -22,6 +22,7 @@
 }
 
 .grid-item_side{
+    
     display: grid;
     grid-template-rows: 1fr 4fr 1fr;
     padding: 10px;
@@ -30,9 +31,12 @@
 }
 
 .grid-item_main{
+    overflow: scroll;
     display: grid;
     grid-template-rows: 20% 80%;
     background-color: #DEF2F1;
+    width: 100%;
+    height: 100%;
 }
 
 .grid-questions{
